[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bunny"
version = "1.0"
description = "A family of lightweight multimodal models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    'accelerate==0.21.0', 'apex', 'bitsandbytes', 'datasets', 'deepspeed==0.12.6', 'einops==0.6.1', 'einops-exts==0.0.4',
    'fastapi', 'flash_attn', 'gradio', 'gradio_client', 'httpx', 'markdown2', 'numpy', 'openpyxl',
    'peft', 'protobuf', 'pydantic', 'pypandoc', 'requests', 'scikit-learn==1.2.2', 'sentencepiece==0.1.99', 'shortuuid',
    'timm==0.6.13', 'tiktoken', 'tokenizers==0.15.1', 'transformers==4.37.2', 'uvicorn', 'xformers'
]


[project.urls]
"Homepage" = "https://github.com/BAAI-DCAI/Bunny"
"Discussion" = "https://github.com/BAAI-DCAI/Bunny/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
